--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pandas>=2.0.3",
     "pip>=24.3.1",
     "plotly>=5.24.1",
+    "scipy>=1.14.1",
     "seaborn>=0.13.2",
     "setuptools>=75.6.0",
     "spacy>=3.7.5",
